--- a/VentUI.ui
+++ b/VentUI.ui
@@ -812,84 +812,6 @@
                <string>RR</string>
               </property>
              </widget>
-             <widget class="QDial" name="fiodial">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="geometry">
-               <rect>
-                <x>310</x>
-                <y>0</y>
-                <width>100</width>
-                <height>100</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>100</width>
-                <height>100</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(0,20,20)</string>
-              </property>
-              <property name="minimum">
-               <number>21</number>
-              </property>
-              <property name="maximum">
-               <number>80</number>
-              </property>
-             </widget>
-             <widget class="QLCDNumber" name="fiolcd">
-              <property name="geometry">
-               <rect>
-                <x>344</x>
-                <y>35</y>
-                <width>52</width>
-                <height>30</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:black</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="digitCount">
-               <number>3</number>
-              </property>
-              <property name="segmentStyle">
-               <enum>QLCDNumber::Flat</enum>
-              </property>
-              <property name="intValue" stdset="0">
-               <number>21</number>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_16">
-              <property name="geometry">
-               <rect>
-                <x>326</x>
-                <y>44</y>
-                <width>32</width>
-                <height>14</height>
-               </rect>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:black</string>
-              </property>
-              <property name="text">
-               <string>FIO2</string>
-              </property>
-             </widget>
              <widget class="QLCDNumber" name="rrlcd">
               <property name="enabled">
                <bool>false</bool>
@@ -927,31 +849,10 @@
                <number>14</number>
               </property>
              </widget>
-             <widget class="QLabel" name="label">
-              <property name="geometry">
-               <rect>
-                <x>410</x>
-                <y>0</y>
-                <width>161</width>
-                <height>31</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Consolas</family>
-                <pointsize>14</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Mode : CMV</string>
-              </property>
-             </widget>
              <widget class="QPushButton" name="btnchangeset">
               <property name="geometry">
                <rect>
-                <x>410</x>
+                <x>430</x>
                 <y>30</y>
                 <width>61</width>
                 <height>40</height>
@@ -965,116 +866,6 @@
               </property>
               <property name="text">
                <string>Change</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_alarm">
-              <property name="geometry">
-               <rect>
-                <x>410</x>
-                <y>90</y>
-                <width>431</width>
-                <height>31</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Consolas</family>
-                <pointsize>14</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Alarm : </string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="peak_lung">
-              <property name="geometry">
-               <rect>
-                <x>530</x>
-                <y>0</y>
-                <width>321</width>
-                <height>20</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Consolas</family>
-                <pointsize>14</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Lung Peak:</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="peak_flow">
-              <property name="geometry">
-               <rect>
-                <x>530</x>
-                <y>20</y>
-                <width>321</width>
-                <height>20</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Consolas</family>
-                <pointsize>14</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Flow Peak:</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="peak_vol">
-              <property name="geometry">
-               <rect>
-                <x>530</x>
-                <y>40</y>
-                <width>311</width>
-                <height>20</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Consolas</family>
-                <pointsize>14</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Vol Peak :</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="lbl_rr">
-              <property name="geometry">
-               <rect>
-                <x>530</x>
-                <y>60</y>
-                <width>311</width>
-                <height>16</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>RR:</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="lbl_ep">
-              <property name="geometry">
-               <rect>
-                <x>530</x>
-                <y>80</y>
-                <width>321</width>
-                <height>16</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>E-&gt;P:</string>
               </property>
              </widget>
             </widget>
@@ -2021,7 +1812,290 @@
                </item>
               </layout>
              </widget>
+             <widget class="QDial" name="fiodial">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="geometry">
+               <rect>
+                <x>236</x>
+                <y>55</y>
+                <width>100</width>
+                <height>100</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>100</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(0,20,20)</string>
+              </property>
+              <property name="minimum">
+               <number>21</number>
+              </property>
+              <property name="maximum">
+               <number>80</number>
+              </property>
+             </widget>
+             <widget class="QLabel" name="label_16">
+              <property name="geometry">
+               <rect>
+                <x>252</x>
+                <y>99</y>
+                <width>32</width>
+                <height>14</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:black</string>
+              </property>
+              <property name="text">
+               <string>FIO2</string>
+              </property>
+             </widget>
+             <widget class="QLCDNumber" name="fiolcd">
+              <property name="geometry">
+               <rect>
+                <x>270</x>
+                <y>90</y>
+                <width>52</width>
+                <height>30</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:black</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Plain</enum>
+              </property>
+              <property name="digitCount">
+               <number>3</number>
+              </property>
+              <property name="segmentStyle">
+               <enum>QLCDNumber::Flat</enum>
+              </property>
+              <property name="intValue" stdset="0">
+               <number>21</number>
+              </property>
+             </widget>
             </widget>
+           </widget>
+          </item>
+          <item>
+           <widget class="QStackedWidget" name="infoStack">
+            <property name="minimumSize">
+             <size>
+              <width>300</width>
+              <height>60</height>
+             </size>
+            </property>
+            <property name="currentIndex">
+             <number>0</number>
+            </property>
+            <widget class="QWidget" name="page_10">
+             <widget class="QLabel" name="label_alarm">
+              <property name="geometry">
+               <rect>
+                <x>20</x>
+                <y>60</y>
+                <width>401</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>14</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Alarm : </string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_lung">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>0</y>
+                <width>100</width>
+                <height>30</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>20</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(229, 76, 0);</string>
+              </property>
+              <property name="text">
+               <string>0.0</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_flow">
+              <property name="geometry">
+               <rect>
+                <x>140</x>
+                <y>0</y>
+                <width>100</width>
+                <height>30</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>20</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>0.0</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_vol">
+              <property name="geometry">
+               <rect>
+                <x>260</x>
+                <y>0</y>
+                <width>51</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>14</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>VP</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="lbl_rr">
+              <property name="geometry">
+               <rect>
+                <x>420</x>
+                <y>0</y>
+                <width>31</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>RR:</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="lbl_ep">
+              <property name="geometry">
+               <rect>
+                <x>320</x>
+                <y>0</y>
+                <width>101</width>
+                <height>16</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Tw Cen MT</family>
+                <pointsize>14</pointsize>
+                <weight>75</weight>
+                <italic>false</italic>
+                <bold>true</bold>
+                <stylestrategy>PreferAntialias</stylestrategy>
+                <kerning>true</kerning>
+               </font>
+              </property>
+              <property name="text">
+               <string>E-&gt;P:</string>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="btnShowHide">
+              <property name="geometry">
+               <rect>
+                <x>550</x>
+                <y>0</y>
+                <width>75</width>
+                <height>23</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>S / H</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_lung_2">
+              <property name="geometry">
+               <rect>
+                <x>48</x>
+                <y>28</y>
+                <width>31</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>20</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:rgb(0, 170, 0)</string>
+              </property>
+              <property name="text">
+               <string>LP</string>
+              </property>
+             </widget>
+             <widget class="QWidget" name="lp_back" native="true">
+              <property name="geometry">
+               <rect>
+                <x>20</x>
+                <y>0</y>
+                <width>91</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(255, 55, 35, 155));</string>
+              </property>
+             </widget>
+             <zorder>lp_back</zorder>
+             <zorder>label_alarm</zorder>
+             <zorder>peak_lung</zorder>
+             <zorder>peak_flow</zorder>
+             <zorder>peak_vol</zorder>
+             <zorder>lbl_rr</zorder>
+             <zorder>lbl_ep</zorder>
+             <zorder>btnShowHide</zorder>
+             <zorder>peak_lung_2</zorder>
+            </widget>
+            <widget class="QWidget" name="page_11"/>
            </widget>
           </item>
           <item>
@@ -2077,7 +2151,6 @@
   <tabstop>vtdial</tabstop>
   <tabstop>iedial</tabstop>
   <tabstop>rrdial</tabstop>
-  <tabstop>fiodial</tabstop>
   <tabstop>connect</tabstop>
   <tabstop>peakdial</tabstop>
   <tabstop>peepdial</tabstop>
