--- a/VentUI.ui
+++ b/VentUI.ui
@@ -1898,7 +1898,7 @@
             <property name="minimumSize">
              <size>
               <width>300</width>
-              <height>60</height>
+              <height>100</height>
              </size>
             </property>
             <property name="currentIndex">
@@ -1929,7 +1929,7 @@
              <widget class="QLabel" name="peak_lung">
               <property name="geometry">
                <rect>
-                <x>10</x>
+                <x>25</x>
                 <y>0</y>
                 <width>100</width>
                 <height>30</height>
@@ -1944,7 +1944,7 @@
                </font>
               </property>
               <property name="styleSheet">
-               <string notr="true">color: rgb(229, 76, 0);</string>
+               <string notr="true">color: rgb(0, 255, 0);</string>
               </property>
               <property name="text">
                <string>0.0</string>
@@ -1956,7 +1956,7 @@
              <widget class="QLabel" name="peak_flow">
               <property name="geometry">
                <rect>
-                <x>140</x>
+                <x>144</x>
                 <y>0</y>
                 <width>100</width>
                 <height>30</height>
@@ -1970,6 +1970,9 @@
                 <bold>true</bold>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(0, 255, 0);</string>
+              </property>
               <property name="text">
                <string>0.0</string>
               </property>
@@ -1980,65 +1983,34 @@
              <widget class="QLabel" name="peak_vol">
               <property name="geometry">
                <rect>
-                <x>260</x>
+                <x>270</x>
                 <y>0</y>
-                <width>51</width>
-                <height>20</height>
+                <width>91</width>
+                <height>31</height>
                </rect>
               </property>
               <property name="font">
                <font>
                 <family>Consolas</family>
-                <pointsize>14</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>VP</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="lbl_rr">
-              <property name="geometry">
-               <rect>
-                <x>420</x>
-                <y>0</y>
-                <width>31</width>
-                <height>20</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>RR:</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="lbl_ep">
-              <property name="geometry">
-               <rect>
-                <x>320</x>
-                <y>0</y>
-                <width>101</width>
-                <height>16</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Tw Cen MT</family>
-                <pointsize>14</pointsize>
+                <pointsize>20</pointsize>
                 <weight>75</weight>
-                <italic>false</italic>
                 <bold>true</bold>
-                <stylestrategy>PreferAntialias</stylestrategy>
-                <kerning>true</kerning>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(0, 255, 0);</string>
+              </property>
               <property name="text">
-               <string>E-&gt;P:</string>
+               <string>0.0</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
              <widget class="QPushButton" name="btnShowHide">
               <property name="geometry">
                <rect>
-                <x>550</x>
+                <x>630</x>
                 <y>0</y>
                 <width>75</width>
                 <height>23</height>
@@ -2051,7 +2023,7 @@
              <widget class="QLabel" name="peak_lung_2">
               <property name="geometry">
                <rect>
-                <x>48</x>
+                <x>58</x>
                 <y>28</y>
                 <width>31</width>
                 <height>31</height>
@@ -2077,23 +2049,273 @@
                <rect>
                 <x>20</x>
                 <y>0</y>
-                <width>91</width>
+                <width>111</width>
                 <height>61</height>
                </rect>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(255, 55, 35, 155));</string>
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(55, 10, 20, 155), stop:1 rgba(255, 55, 35, 155));</string>
               </property>
              </widget>
+             <widget class="QWidget" name="lp_back_2" native="true">
+              <property name="geometry">
+               <rect>
+                <x>140</x>
+                <y>0</y>
+                <width>111</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(55, 10, 20, 155), stop:1 rgba(255, 55, 35, 155));</string>
+              </property>
+              <widget class="QLabel" name="label">
+               <property name="geometry">
+                <rect>
+                 <x>30</x>
+                 <y>30</y>
+                 <width>47</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Consolas</family>
+                 <pointsize>20</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:rgb(0, 170, 0);
+background-color: rgba(255, 255, 255, 0);</string>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="text">
+                <string>FP</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </widget>
+             <widget class="QWidget" name="lp_back_3" native="true">
+              <property name="geometry">
+               <rect>
+                <x>260</x>
+                <y>0</y>
+                <width>111</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(55, 10, 20, 155), stop:1 rgba(255, 55, 35, 155));</string>
+              </property>
+              <widget class="QLabel" name="label_7">
+               <property name="geometry">
+                <rect>
+                 <x>30</x>
+                 <y>30</y>
+                 <width>47</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Consolas</family>
+                 <pointsize>20</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:rgb(0, 170, 0);
+background-color: rgba(255, 255, 255, 0);</string>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="text">
+                <string>VP</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </widget>
+             <widget class="QWidget" name="lp_back_4" native="true">
+              <property name="geometry">
+               <rect>
+                <x>380</x>
+                <y>0</y>
+                <width>111</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(55, 10, 20, 155), stop:1 rgba(255, 55, 35, 155));</string>
+              </property>
+              <widget class="QLabel" name="label_20">
+               <property name="geometry">
+                <rect>
+                 <x>30</x>
+                 <y>30</y>
+                 <width>47</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Consolas</family>
+                 <pointsize>20</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:rgb(0, 170, 0);
+background-color: rgba(255, 255, 255, 0);</string>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="text">
+                <string>RR</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </widget>
+             <widget class="QLabel" name="lbl_rr">
+              <property name="geometry">
+               <rect>
+                <x>390</x>
+                <y>0</y>
+                <width>91</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>20</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgba(255, 255, 255, 0);
+color: rgb(0, 255, 0);</string>
+              </property>
+              <property name="text">
+               <string>0.0</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QWidget" name="lp_back_5" native="true">
+              <property name="geometry">
+               <rect>
+                <x>500</x>
+                <y>0</y>
+                <width>111</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(55, 10, 20, 155), stop:1 rgba(255, 55, 35, 155));</string>
+              </property>
+              <widget class="QLabel" name="label_21">
+               <property name="geometry">
+                <rect>
+                 <x>6</x>
+                 <y>30</y>
+                 <width>101</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Consolas</family>
+                 <pointsize>20</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:rgb(0, 170, 0);
+background-color: rgba(255, 255, 255, 0);</string>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="text">
+                <string>E-&gt;P</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+              <widget class="QLabel" name="lbl_ep">
+               <property name="geometry">
+                <rect>
+                 <x>4</x>
+                 <y>0</y>
+                 <width>101</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Tw Cen MT</family>
+                 <pointsize>20</pointsize>
+                 <weight>75</weight>
+                 <italic>false</italic>
+                 <bold>true</bold>
+                 <stylestrategy>PreferAntialias</stylestrategy>
+                 <kerning>true</kerning>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">background-color: rgba(255, 255, 255, 0);
+color: rgb(0, 255, 0);</string>
+               </property>
+               <property name="text">
+                <string>0.0</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </widget>
+             <zorder>lp_back_3</zorder>
+             <zorder>lp_back_2</zorder>
              <zorder>lp_back</zorder>
              <zorder>label_alarm</zorder>
              <zorder>peak_lung</zorder>
              <zorder>peak_flow</zorder>
              <zorder>peak_vol</zorder>
-             <zorder>lbl_rr</zorder>
-             <zorder>lbl_ep</zorder>
              <zorder>btnShowHide</zorder>
              <zorder>peak_lung_2</zorder>
+             <zorder>lp_back_4</zorder>
+             <zorder>lbl_rr</zorder>
+             <zorder>lp_back_5</zorder>
             </widget>
             <widget class="QWidget" name="page_11"/>
            </widget>
