change signal.py : edge detection > 0 or < 0. adding colors. 11

--- a/VentUI.ui
+++ b/VentUI.ui
@@ -1962,6 +1962,29 @@
                <bool>true</bool>
               </property>
              </widget>
+             <widget class="QLabel" name="lblMode">
+              <property name="geometry">
+               <rect>
+                <x>20</x>
+                <y>60</y>
+                <width>101</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>20</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>BiPAP</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
             </widget>
             <widget class="QWidget" name="page_13"/>
            </widget>
