--- a/VentUI.ui
+++ b/VentUI.ui
@@ -889,7 +889,7 @@
              <widget class="QPushButton" name="btnchangeset">
               <property name="geometry">
                <rect>
-                <x>430</x>
+                <x>540</x>
                 <y>30</y>
                 <width>61</width>
                 <height>40</height>
@@ -908,7 +908,7 @@
              <widget class="QLabel" name="labelipap">
               <property name="geometry">
                <rect>
-                <x>318</x>
+                <x>418</x>
                 <y>90</y>
                 <width>81</width>
                 <height>31</height>
@@ -937,7 +937,7 @@
               </property>
               <property name="geometry">
                <rect>
-                <x>310</x>
+                <x>410</x>
                 <y>0</y>
                 <width>100</width>
                 <height>100</height>
@@ -965,7 +965,7 @@
              <widget class="QLCDNumber" name="ipaplcd">
               <property name="geometry">
                <rect>
-                <x>330</x>
+                <x>430</x>
                 <y>30</y>
                 <width>64</width>
                 <height>40</height>
@@ -993,38 +993,11 @@
                <number>25</number>
               </property>
              </widget>
-            </widget>
-            <widget class="QWidget" name="page_2">
-             <widget class="QDial" name="peakdial">
-              <property name="geometry">
-               <rect>
-                <x>20</x>
-                <y>20</y>
-                <width>100</width>
-                <height>100</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>100</width>
-                <height>100</height>
-               </size>
-              </property>
-              <property name="minimum">
-               <number>15</number>
-              </property>
-              <property name="maximum">
-               <number>50</number>
-              </property>
-              <property name="value">
-               <number>25</number>
-              </property>
-             </widget>
              <widget class="QLCDNumber" name="peaklcd">
               <property name="geometry">
                <rect>
-                <x>40</x>
-                <y>50</y>
+                <x>330</x>
+                <y>30</y>
                 <width>61</width>
                 <height>40</height>
                </rect>
@@ -1054,19 +1027,77 @@
              <widget class="QLabel" name="label_9">
               <property name="geometry">
                <rect>
-                <x>14</x>
-                <y>8</y>
+                <x>300</x>
+                <y>90</y>
                 <width>121</width>
-                <height>21</height>
+                <height>71</height>
                </rect>
               </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(152, 142, 255);</string>
+              </property>
               <property name="text">
-               <string>PEAK PRESSURE</string>
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;PEAK&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;PRESSURE&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
               </property>
              </widget>
+             <widget class="QDial" name="peakdial">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="geometry">
+               <rect>
+                <x>310</x>
+                <y>0</y>
+                <width>100</width>
+                <height>100</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>100</height>
+               </size>
+              </property>
+              <property name="minimum">
+               <number>15</number>
+              </property>
+              <property name="maximum">
+               <number>50</number>
+              </property>
+              <property name="value">
+               <number>25</number>
+              </property>
+             </widget>
+             <zorder>peakdial</zorder>
+             <zorder>vtdial</zorder>
+             <zorder>vtlcd</zorder>
+             <zorder>label_13</zorder>
+             <zorder>iedial</zorder>
+             <zorder>ilcd</zorder>
+             <zorder>label_17</zorder>
+             <zorder>ielcd</zorder>
+             <zorder>label_15</zorder>
+             <zorder>rrdial</zorder>
+             <zorder>label_14</zorder>
+             <zorder>rrlcd</zorder>
+             <zorder>btnchangeset</zorder>
+             <zorder>labelipap</zorder>
+             <zorder>ipapdial</zorder>
+             <zorder>ipaplcd</zorder>
+             <zorder>peaklcd</zorder>
+             <zorder>label_9</zorder>
+            </widget>
+            <widget class="QWidget" name="page_2">
              <widget class="QDial" name="peepdial">
               <property name="geometry">
                <rect>
@@ -1997,6 +2028,12 @@
               <height>100</height>
              </size>
             </property>
+            <property name="maximumSize">
+             <size>
+              <width>1000</width>
+              <height>16777215</height>
+             </size>
+            </property>
             <property name="currentIndex">
              <number>0</number>
             </property>
@@ -2477,7 +2514,6 @@ color: rgb(0, 255, 0);</string>
   <tabstop>iedial</tabstop>
   <tabstop>rrdial</tabstop>
   <tabstop>connect</tabstop>
-  <tabstop>peakdial</tabstop>
   <tabstop>peepdial</tabstop>
   <tabstop>lowpdial</tabstop>
   <tabstop>himinitdial</tabstop>
